--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
       <div class="first-container d-flex flex-column align-center">
         <div class="container">
   
-           <div class="slider-container">
+           <div class="slider-container" @mouseleave="autoplay()"
+           @mouseover="stopAutoplay()">
               <div class="current-image">
                 <img 
                   class="" 
